deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: 300481-tk
  namespace: 300481-tk
  labels:
    app: 300481-tk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 300481-tk
  template:
    metadata:
      labels:
        app: 300481-tk
    spec:
      containers:
        - name: 300481-tk
          image: 'ghcr.io/300481/300481.tk:v0.0.4'
          resources:
            requests:
              memory: "4Mi"
              cpu: "100m"
            limits:
              memory: "32Mi"
              cpu: "200m"
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
